# SeaLantern-CPE

./: .SRCINFO  .gitattributes  .oxlintrc.json  Cargo.toml  PKGBUILD  README-en.md  README.md  _config.yml  commitlint.config.cjs  index.html  package-lock.json  package.json  pnpm-lock.yaml  sealantern.desktop  sealantern.install  tsconfig.json  vite.config.ts  免责声明.md  提交前测试必读！！！.md  新手使用教程.html
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  documentation_request.md  documentation_request.yml  feature_request.md  feature_request.yml  improvement_request.yml  performance_request.md  refactor_request.md  refactor_request.yml
.github/workflows/: aur-publish.yml  check.yml  issue-check.yml  release.yml  sync-to-cnb.yml
.husky/: commit-msg  pre-commit
.zed/: settings.json
docs/: AI_GUIDE.md  CONTRIBUTING.md  STRUCTURE.md  plugin_api.md  新手使用教程.html
scripts/: version.mjs
src/: App.vue  main.ts  style.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/assemblies/panic_report/getregs/: x64_linux.asm
src-tauri/src/commands/: downloader.rs  logging.rs  mod.rs  plugin.rs  server.rs  settings.rs  system.rs  update.rs  update_checksum.rs  update_cnb.rs  update_github.rs  update_types.rs  update_version.rs
src-tauri/src/models/: download.rs  mod.rs  server.rs  settings.rs
src-tauri/src/plugins/: api.rs  loader.rs  manager.rs
src-tauri/src/plugins/runtime/: api_bridge.rs  console.rs  element.rs  filesystem.rs  filesystem_test.rs  helpers.rs  http.rs  i18n.rs  log.rs  mod.rs  server.rs  storage.rs  system.rs
src-tauri/src/services/: download_manager.rs  i18n.rs  java_detector.rs  mod.rs  panic_report.rs  server_installer.rs  server_log_pipeline.rs  server_manager.rs  starter_installer_links.rs
src-tauri/src/utils/: cli.rs  downloader.rs  logger.rs  mod.rs
src/api/: config.ts  downloader.ts  index.ts  logging.ts  mcs_plugins.ts  plugin.ts  remoteLocales.ts  server.ts  settings.ts  system.ts  tauri.ts  update.ts
src/components/: JavaDownloader.vue  index.ts
src/composables/: useComponentRegistry.ts  useTabIndicator.ts
src/data/: contributors.ts
src/language/: README-en.md  README.md  de-DE.json  en-US.json  es-ES.json  fr-FA.json  ja-JP.json  ko-KR.json  ru-RU.json  vi-VN.json  zh-CN.json  zh-TW.json
src/locales/: en-US.json  zh-CN.json  zh-TW.json
src/router/: index.ts
src/stores/: consoleStore.ts  i18nStore.ts  pluginStore.ts  serverStore.ts  settingsStore.ts
src/styles/: animations.css  glass.css  reset.css  typography.css  variables.css
src/themes/: README.md  default.ts  midnight.ts  ocean.ts  rose.ts  sunset.ts
src/types/: server.ts
src/utils/: constants.ts  errorHandler.ts  quoteUtils.ts  serverUtils.ts  theme.ts  (+2 more)
(+94 files in other folders)
