[package]
name = "sea-lantern"
version = "0.5.0"
description = "Minecraft Server Manager"
authors = ["FPS_Z"]
edition = "2021"

[lib]
name = "sea_lantern_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "fs",
    "process",
    "io-util",
    "net",
    "time",
    "sync",
] }
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
dirs-next = "2"
reqwest = { version = "0.12", features = ["json"] }
opener = "0.7"
tauri-plugin-updater = "2.10.0"
tauri-plugin-process = "2.3.1"
tauri-plugin-http = "2.5.7"
tauri-plugin-window-state = "2"
window-vibrancy = "0.5"
font-kit = "0.14"
sysinfo = "0.32"
regex = "1.10"
futures = "0.3.32"
indicatif = "0.18.4"
[target.'cfg(windows)'.dependencies]
winreg = "0.52"
